Fix header overflow

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -175,6 +175,7 @@ li .dropdown-menu {
 
     .navbar-header {
       h1 {
+        overflow: hidden;
         font-size: 24px;
       }
       h4 {
